--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "A Solid Implementation of the Realworld Example App",
   "main": "public/index.js",
   "scripts": {
-    "start": "serve public -l 5000 -s & rollup -w -c",
-    "build": "rollup -c --environment production",
-    "test": "test"
+    "dev": "vite",
+    "build": "vite build"
   },
   "repository": {
     "type": "git",
@@ -24,20 +23,11 @@
   },
   "homepage": "https://github.com/ryansolid/solid-realworld#readme",
   "dependencies": {
-    "marked": "^0.8.0",
-    "solid-js": "0.24.0"
+    "marked": "^2.0.1",
+    "solid-js": "0.24.12"
   },
   "devDependencies": {
-    "@babel/core": "7.12.13",
-    "@babel/plugin-proposal-optional-chaining": "7.12.13",
-    "@babel/plugin-syntax-dynamic-import": "7.8.3",
-    "@rollup/plugin-commonjs": "17.1.0",
-    "@rollup/plugin-node-resolve": "11.1.1",
-    "babel-preset-solid": "0.24.0",
-    "rollup": "2.38.4",
-    "@rollup/plugin-babel": "5.2.0",
-    "rollup-plugin-delete": "^2.0.0",
-    "rollup-plugin-terser": "^7.0.0",
-    "serve": "^11.3.2"
+    "vite": "^2.0.5",
+    "vite-plugin-solid": "^1.2.1"
   }
 }
