--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
-  "trailingComma": "none",
+  "trailingComma": "all",
   "tabWidth": 2,
   "semi": true,
-  "singleQuote": false,
-  "printWidth": 100
+  "singleQuote": true,
+  "printWidth": 80
 }
