--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,2 @@
+node_modules
 dist
-
-# dependencies
-/node_modules
-
-# IDEs and editors
-/.idea
-.project
-.classpath
-*.launch
-.settings/
-
-
-#System Files
-.DS_Store
-Thumbs.db
