--- a/package.json
+++ b/package.json
@@ -1,36 +1,21 @@
 {
   "name": "solid-realworld",
-  "version": "0.0.0",
-  "description": "A Solid Implementation of the Realworld Example App",
+  "description": "Solid real world",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "format": "prettier --write \"src/*/*.{jsx,tsx,js,ts,html,json,css}\""
+    "postinstall": "patch-package"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ryansolid/solid-realworld.git"
-  },
-  "keywords": [
-    "Solid",
-    "Realworld",
-    "example"
-  ],
-  "author": "Ryan Carniato",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ryansolid/solid-realworld/issues"
+  "devDependencies": {
+    "@types/marked": "^1.2.2",
+    "patch-package": "^6.4.5",
+    "vite": "^2.0.5",
+    "vite-plugin-solid": "^1.2.2"
   },
-  "homepage": "https://github.com/ryansolid/solid-realworld#readme",
   "dependencies": {
     "marked": "^2.0.1",
     "solid-app-router": "^0.0.32",
-    "solid-js": "0.24.13"
-  },
-  "devDependencies": {
-    "prettier": "^2.2.1",
-    "typescript": "^4.2.3",
-    "vite": "^2.0.5",
-    "vite-plugin-solid": "^1.2.2"
+    "solid-js": "^0.24.13"
   }
 }
