--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,12 @@
 {
   "compilerOptions": {
-    "module": "esnext",
-    "target": "esnext",
+    "target": "ESNext",
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "jsx": "preserve",
-    "moduleResolution": "Node",
     "jsxImportSource": "solid-js",
-    "strictFunctionTypes": true,
-    "sourceMap": true
-  },
-  "exclude": ["node_modules", "**/node_modules/*"]
+    "types": ["vite/client"]
+  }
 }
