--- a/package.json
+++ b/package.json
@@ -3,19 +3,17 @@
   "description": "Solid real world",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "postinstall": "patch-package"
+    "build": "vite build"
   },
   "license": "MIT",
   "devDependencies": {
     "@types/marked": "^2.0.0",
-    "patch-package": "^6.4.6",
     "vite": "^2.0.5",
     "vite-plugin-solid": "^1.3.0"
   },
   "dependencies": {
     "marked": "^2.0.1",
-    "solid-app-router": "^0.0.32",
+    "solid-app-router": "^0.0.34",
     "solid-js": "^0.24.13"
   }
 }
