--- a/package.json
+++ b/package.json
@@ -2,17 +2,24 @@
   "name": "solid-realworld",
   "description": "Solid real world",
   "scripts": {
-    "dev": "vite",
+    "dev": "jiti server",
     "build": "vite build"
   },
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "@types/marked": "^2.0.0",
+    "@types/node": "^14.14.33",
+    "jiti": "^1.6.3",
     "vite": "^2.0.5",
     "vite-plugin-solid": "^1.3.0"
   },
   "dependencies": {
+    "cookie-parser": "^1.4.5",
+    "express": "^4.17.1",
     "marked": "^2.0.1",
+    "node-fetch": "^2.6.1",
+    "serve-static": "^1.14.1",
     "solid-app-router": "^0.0.34",
     "solid-js": "^0.24.13"
   }
